# NodeKitten

./: .gitignore  LICENSE  NodeKittenX.podspec  README.md  juce_nodeKitten.h  juce_nodeKitten.mm  package.cson  tmake.yaml
blocks/leif/NodeKittenX/: CMakeLists.txt  NodeKitten.h  biicode.conf  compiler_check.cmake  main.cpp
blocks/leif/NodeKittenX/Animation/: Action.cpp  Action.h
blocks/leif/NodeKittenX/Apple/: NKAppleDeviceTools.h  NKAppleEvent.h  NKAppleEvent.mm  NKAppleViews.mm  NKGLManager.mm  NKOculusInterface.cpp
blocks/leif/NodeKittenX/Event/: NKAction.cpp  NKAction.h  NKEvent.cpp  NKEvent.h
blocks/leif/NodeKittenX/Examples/: AnimationExample.cpp  DrawingExample.cpp  DrawingExample.h  ExampleScene.cpp  ExampleScene.h  FreeTypeScene.cpp  FreeTypeScene.h  FreeTypeTest.cpp  FreeTypeTest.h  LayoutExample.cpp  LayoutExample.h  Text3DExample.cpp
blocks/leif/NodeKittenX/Generic/: Drawable.h  Generic.h  Layout.h  Nodal.h  Reactive.h  Transformable.h
blocks/leif/NodeKittenX/Node/: Camera.cpp  Camera.h  Generics.cpp  Generics.h  Label.cpp  Label.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  MeshBatcher.cpp  MeshBatcher.h  NKBatchNode.cpp  NKBatchNode.h  NKCamera.cpp  NKCamera.h  NKLightNode.cpp  NKLightNode.h  NKMeshNode.cpp  NKMeshNode.h  NKNode.cpp  NKNode.h  NKSceneNode.cpp  NKSceneNode.h  Node.cpp  Node.h  Scene.cpp  Scene.h  SpriteEmitter.cpp  SpriteEmitter.h
blocks/leif/NodeKittenX/Platform/: Platform.h
blocks/leif/NodeKittenX/Platform/Cocoa/: CocoaDeviceTools.h  CocoaDeviceTools.mm  CocoaGLManager.h  CocoaUXEvent.h  CocoaUXEvent.mm  CocoaViews.h  CocoaViews.mm  NKAppleDeviceTools.mm  NKAppleViews.h  NKAppleViews.mm  NKGLManager.h  NKGLManager.mm
blocks/leif/NodeKittenX/Platform/Common/: CommonPlatform.h  Platform.h  SceneController.cpp  SceneController.h  UXEvent.cpp  UXEvent.h
blocks/leif/NodeKittenX/Platform/SDL/: NKSDLView.cpp  NKSDLView.h
blocks/leif/NodeKittenX/Shader/: GLState.cpp  GLState.h  NKShaderManager.cpp  NKShaderManager.h  NKShaderModule.cpp  NKShaderModule.h  NKShaderProgram.cpp  NKShaderProgram.h  NKShaderTools.cpp  NKShaderTools.h  ShaderModule.cpp  ShaderModule.h  ShaderProgram.cpp  ShaderProgram.h  ShaderTools.cpp  ShaderTools.h
blocks/leif/NodeKittenX/Texture/: FontAtlas.cpp  FontAtlas.h  FrameBuffer.cpp  FrameBuffer.h  NKFontAtlas.cpp  NKFontAtlas.h  NKFrameBuffer.cpp  NKFrameBuffer.h  NKTexture.cpp  NKTexture.h  NKTextureManager.cpp  NKTextureManager.h  Texture.cpp  Texture.h
blocks/leif/NodeKittenX/Types/: CommonTypes.h  Macro.h  NKColor.cpp  NKColor.h  NKMacro.h  NKMath.h  NKMatrixStack.cpp  NKMatrixStack.h  NKTemplateFunctions.h  NKTypes.h  NKVectorTypes.h  NKVertexBuffer.cpp  NKVertexBuffer.h  ScalarStack.h  TemplateFunctions.h  VectorTypes.h  VectorUtil.h  VertexBuffer.cpp  VertexBuffer.h  json-underscore.h  json.h
blocks/leif/NodeKittenX/Utils/: CommonUtils.h  Dispatch.cpp  FileUtil.cpp  FileUtil.h  Functional.h  NKFileSystem.cpp  NKFileSystem.h  NKOculusInterface.h  NKStringUtil.cpp  NKStringUtil.h  NKTime.cpp  NKTime.h  StringUtil.cpp  StringUtil.h  VectorUtil.h  format.cpp  perlin.cpp  perlin.h
blocks/leif/NodeKittenX/View/: CollectionView.cpp  CollectionView.h  ContainerView.cpp  ContainerView.h  DynamicDataSource.cpp  DynamicDataSource.h  Label.cpp  Label.h  LayoutController.cpp  LayoutController.h  NKEmscriptenView.h  NKSDLView.cpp  NKSDLView.h  NKView.cpp  NKView.h  Scene.cpp  Scene.h  ScrollView.cpp  ScrollView.h  View.cpp  View.h
examples/: .gitignore  animationExample.h  drawingExample.h  examples.h  package.cson  tmake.yaml
examples/archive/: drawingExample.h  freeTypeTest.h  layoutExample.cpp  layoutExample.h  simpleSynth.cpp  simpleSynth.h  text3DExample.cpp  text3DExample.h
examples/source/: animationExample.cpp  animationExample.h  examples.cpp  examples.h
source/: nodeKitten.h
source/core/: core.h  define.h  macro.h  platform.h  type.h
source/core/animation/: action.cpp  action.h
source/core/generic/: drawable.h  layout.h  reactive.h
source/core/gl/: fontAtlas.cpp  fontAtlas.h  frameBuffer.h  gl.h  shaderModule.cpp  shaderModule.h  shaderProgram.cpp  shaderProgram.h  shaderTools.cpp  shaderTools.h  state.cpp  state.h  texture.cpp  texture.h  vertexBuffer.cpp  vertexBuffer.h
source/core/node/: camera.cpp  camera.h  light.cpp  light.h  mesh.cpp  mesh.h  meshBatcher.cpp  meshBatcher.h  node.cpp  node.h  spriteEmitter.cpp
source/core/platform/: platform.h  sceneController.cpp  sceneController.h  uxEvent.cpp  uxEvent.h
source/core/util/: dispatch.cpp  dispatch.h  file.cpp  file.h  functional.h  hash.h  jpeg.h  log.h  noise.h  png.h  string.cpp  string.h  time.cpp  time.h  util.h
source/core/vector/: stack.cpp  stack.h  type.h  vector.h
source/core/view/: collectionView.h  containerView.cpp  dynamicDataSource.h  label.cpp  label.h  scene.cpp  scene.h  scrollView.cpp  scrollView.h  view.cpp  view.h
source/ext/audio/: audio.cpp
source/ext/picojpeg/: picojpeg_util.cpp
source/ext/underscore/: _.hpp
source/ext/zlib/: biicode.conf
source/platform/android/: AndroidUtils.h
source/tests/: tests.cpp  tests.h
src/: NodeKitten.h  main.cpp
src/Animation/: Action.h
src/Examples/: AnimationExample.cpp  AnimationExample.h  DrawingExample.cpp  DrawingExample.h  Examples.h  FreeTypeTest.cpp  FreeTypeTest.h  LayoutExample.cpp  LayoutExample.h  SimpleSynth.cpp  SimpleSynth.h  Text3DExample.cpp  Text3DExample.h
src/Generic/: Drawable.h  Layout.h  Nodal.h  Reactive.h  Transformable.h
src/Node/: Camera.cpp  Light.cpp  MeshBatcher.cpp  Node.cpp  Node.h  SpriteEmitter.cpp
src/Shader/: GLState.cpp  ShaderModule.cpp  ShaderModule.h  ShaderProgram.cpp  ShaderProgram.h  ShaderTools.cpp  ShaderTools.h
src/Texture/: FrameBuffer.cpp  FrameBuffer.h  Texture.h
src/Types/: CommonTypes.h  ScalarStack.cpp  VectorTypes.h  VertexBuffer.cpp  VertexBuffer.h  jsoncpp.cpp
src/Utils/: CommonUtils.h  Dispatch.h  FileUtil.cpp  NKOculusInterface.h  TimeUtil.cpp  TimeUtil.h
src/View/: CollectionView.h  ContainerView.h  Label.cpp  Label.h  Scene.cpp  Scene.h  View.cpp  View.h
src/core/: core.h  macro.h
(+109 files in other folders)
